lab3-1-create-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-min
  annotations:
   field.cattle.io/projectId: c-m-7l8v45x2:p-z5t58
