lab2-5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo8-1
  namespace: uptime-demo8-1
spec:
  ingressClassName: nginx
  rules:
  - host: itrmutt-demo8-1.k8s.ipv9.xyz
    http:
      paths:
      - backend:
          service:
            name: demo8-1
            port:
              number: 3001
        path: /
        pathType: Prefix
